linear_activation function and it's verification for correct output added

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the b ans w for deep NN\n",
+    "# Initialize the b and w for deep NN\n",
     "def initialize_parameters(layer_dims):\n",
     "    np.random.seed(3)\n",
     "    params = {}\n",
@@ -95,6 +95,65 @@
     "b3 =  (9, 1)\n",
     "W4 =  (1, 9)\n",
     "b4 =  (1, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Activation functions\n",
+    "def linear_activation(A, W, b):\n",
+    "    Z = np.dot(W, A) + b\n",
+    "\n",
+    "    #verify the output shape for proper activation\n",
+    "    assert(Z.shape == (W.shape[0], A.shape[1]))\n",
+    "\n",
+    "    cache = (A, W, b)\n",
+    "    return Z, cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For given A, W and b:\n",
+    "A = [[ 1.62434536, -0.61175641]\n",
+    " [-0.52817175, -1.07296862]\n",
+    " [ 0.86540763, -2.3015387 ]]\n",
+    "\n",
+    "W = [[ 1.74481176, -0.7612069,   0.3190391 ]]\n",
+    "b = [[-0.24937038]]\n",
+    "\n",
+    "Z should be:\n",
+    "Z = [[ 3.26295337, -1.23429987]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.26295336 -1.23429988]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify linear_activation function output\n",
+    "A = np.array([[ 1.62434536, -0.61175641],[-0.52817175, -1.07296862],[ 0.86540763, -2.3015387 ]])\n",
+    "\n",
+    "W = np.array([[ 1.74481176, -0.7612069,   0.3190391 ]])\n",
+    "\n",
+    "b = np.array([[-0.24937038]])\n",
+    "\n",
+    "Z, cache = linear_activation(A, W, b)\n",
+    "\n",
+    "print(Z)"
    ]
   },
   {
