Linear_activation, sigmoid and relu activation functions added

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -99,11 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Activation functions\n",
+    "# Linear Activation Function\n",
     "def linear_activation(A, W, b):\n",
     "    Z = np.dot(W, A) + b\n",
     "\n",
@@ -111,7 +112,19 @@
     "    assert(Z.shape == (W.shape[0], A.shape[1]))\n",
     "\n",
     "    cache = (A, W, b)\n",
-    "    return Z, cache"
+    "    return Z, cache\n",
+    "\n",
+    "# Sigmoid Activation Function\n",
+    "def sigmoid(Z):\n",
+    "    A = 1/(1 + np.exp(-Z))\n",
+    "    cache = Z\n",
+    "    return A, cache\n",
+    "\n",
+    "# Relu Activation Function\n",
+    "def relu(Z):\n",
+    "    A = np.maximum(0, Z)\n",
+    "    cache = Z\n",
+    "    return A, cache"
    ]
   },
   {
@@ -132,14 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3.26295336 -1.23429988]]\n"
+      "Linear:  [[ 3.26295336 -1.23429988]]\n",
+      "Sigmoid:  [[0.96313579 0.22542973]]\n",
+      "Relu:  [[3.26295336 0.        ]]\n"
      ]
     }
    ],
@@ -152,8 +167,12 @@
     "b = np.array([[-0.24937038]])\n",
     "\n",
     "Z, cache = linear_activation(A, W, b)\n",
+    "A_sig, cache = sigmoid(Z)\n",
+    "A_relu, cache = relu(Z)\n",
     "\n",
-    "print(Z)"
+    "print('Linear: ', Z)\n",
+    "print('Sigmoid: ', A_sig)\n",
+    "print('Relu: ', A_relu)"
    ]
   },
   {
