--- a/utils.ipynb
+++ b/utils.ipynb
@@ -177,6 +177,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Activation Function forward\n",
+    "def activation_forward(A_prev, W, b, activation):\n",
+    "    Z, linear_cache = linear_activation(A_prev, W, b)\n",
+    "    if activation == 'sigmoid':\n",
+    "        A, activation_cache = sigmoid(Z)\n",
+    "    elif activation == 'relu':\n",
+    "        A, activation_cache = relu(Z)\n",
+    "    \n",
+    "    # Output verification\n",
+    "    assert(A.shape == (W.shape[0], A_prev.shape[1]))\n",
+    "    \n",
+    "    cache = (linear_cache, activation_cache)\n",
+    "    \n",
+    "    return A, cache\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With sigmoid: A = [[0.96890023 0.11013289]]\n",
+      "With ReLU: A = [[3.43896134 0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_prev = np.array([[-0.41675785, -0.05626683], [-2.1361961,   1.64027081], [-1.79343559, -0.84174737]])\n",
+    "W = np.array([[ 0.50288142, -1.24528809, -1.05795222]])\n",
+    "b = np.array([[-0.90900761]])\n",
+    "\n",
+    "A, linear_cache = activation_forward(A_prev, W, b, activation = \"sigmoid\")\n",
+    "print(\"With sigmoid: A = \" + str(A))\n",
+    "\n",
+    "A, activation_cache = activation_forward(A_prev, W, b, activation = \"relu\")\n",
+    "print(\"With ReLU: A = \" + str(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
