Linear model and Compute cost functions added and verified

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -11,7 +11,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "# Impors\n",
     "import numpy as np\n",
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +230,110 @@
     "\n",
     "A, activation_cache = activation_forward(A_prev, W, b, activation = \"relu\")\n",
     "print(\"With ReLU: A = \" + str(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear Model Function Which replicate the n layers and uses different activation function for different layers\n",
+    "def linear_model(X, params):\n",
+    "    caches = []\n",
+    "    A = X\n",
+    "    L = int(len(params) / 2)\n",
+    "    print(\"Length of the Layers : \", L)\n",
+    "    for l in range(1, L):\n",
+    "        A_prev = A\n",
+    "        A, cache = activation_forward(A_prev, params['W' + str(l)], params['b'+str(l)], 'relu')\n",
+    "        caches.append(cache)\n",
+    "    AL, cache = activation_forward(A, params['W' + str(L)], params['b' + str(L)], 'sigmoid' )\n",
+    "    caches.append(cache)\n",
+    "\n",
+    "    # Verify the output shape\n",
+    "    assert(AL.shape == (1, X.shape[1]))\n",
+    "    return AL, caches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the Layers :  3\n",
+      "AL = [[0.03921668 0.70498921 0.19734387 0.04728177]]\n",
+      "Length of caches list = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify the output\n",
+    "X = np.array([[-0.31178367,  0.72900392, 0.21782079, -0.8990918 ],\n",
+    " [-2.48678065,  0.91325152,  1.12706373, -1.51409323],\n",
+    " [ 1.63929108, -0.4298936,   2.63128056,  0.60182225],\n",
+    " [-0.33588161,  1.23773784,  0.11112817,  0.12915125],\n",
+    " [ 0.07612761, -0.15512816,  0.63422534,  0.810655  ]])\n",
+    "params = {'W1': np.array([[ 0.35480861,  1.81259031, -1.3564758 , -0.46363197,  0.82465384],\n",
+    "       [-1.17643148,  1.56448966,  0.71270509, -0.1810066 ,  0.53419953],\n",
+    "       [-0.58661296, -1.48185327,  0.85724762,  0.94309899,  0.11444143],\n",
+    "       [-0.02195668, -2.12714455, -0.83440747, -0.46550831,  0.23371059]]), \n",
+    "       'b1': np.array([[ 1.38503523], [-0.51962709], [-0.78015214], [ 0.95560959]]), \n",
+    "       'W2': np.array([[-0.12673638, -1.36861282,  1.21848065, -0.85750144], [-0.56147088, -1.0335199 ,  0.35877096,  1.07368134], [-0.37550472,  0.39636757, -0.47144628,  2.33660781]]), \n",
+    "       'b2': np.array([[ 1.50278553], [-0.59545972], [ 0.52834106]]), \n",
+    "       'W3': np.array([[ 0.9398248 ,  0.42628539, -0.75815703]]), \n",
+    "       'b3': np.array([[-0.16236698]])}\n",
+    "AL, caches = linear_model(X, params)\n",
+    "print(\"AL = \" + str(AL))\n",
+    "print(\"Length of caches list = \" + str(len(caches)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conpute Cost (Cost Function)\n",
+    "def compute_cost(AL, Y):\n",
+    "    m = Y.shape[1]\n",
+    "    cost = (-1/m)*(np.dot(Y, np.log(AL).T) + np.dot((1 - Y), np.log(1 - AL).T))\n",
+    "    cost = np.squeeze(cost)\n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For given Y and AL :  Y = np.array([[1, 1, 0]])\n",
+    "AL = np.array([[0.8, 0.9, 0.4]])\n",
+    "Cost should be 0.2797765635793422"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost:  0.2797765635793422\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test the cost function\n",
+    "Y = np.array([[1, 1, 0]])\n",
+    "AL = np.array([[0.8, 0.9, 0.4]])\n",
+    "cost = compute_cost(AL, Y)\n",
+    "print('Cost: ', cost)\n"
    ]
   },
   {
