Linear, sigmoid and relu backward activation functions added

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -337,6 +337,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Backward Propogation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Backward Activation functions\n",
+    "# Linear Backward Activation Function\n",
+    "def linear_backward_activation(dZ, cache):\n",
+    "    A_prev, W, b = cache\n",
+    "    m = A_prev.shape[1]\n",
+    "\n",
+    "    dA_prev = np.dot(W.T, dZ)\n",
+    "    dW = (1/m) * np.dot(dZ, A_prev.T)\n",
+    "    db = (1 / m) * np.sum(dZ, axis=1, keepdims=True)\n",
+    "\n",
+    "    assert (dA_prev.shape == A_prev.shape)\n",
+    "    assert (dW.shape == W.shape)\n",
+    "    assert (db.shape == b.shape)\n",
+    "    \n",
+    "    return dA_prev, dW, db\n",
+    "\n",
+    "# Sigmoid Backward Activation Function\n",
+    "def sigmoid_backward_activation(dA, cache):\n",
+    "    Z = cache\n",
+    "    s = 1/(1 + np.exp(-Z))\n",
+    "    dZ = dA * s * (1 - s)\n",
+    "    assert(dZ.shape == Z.shape)\n",
+    "    return dZ\n",
+    "\n",
+    "# Relu Backward Activation Function\n",
+    "def relu_backward_activation(dA, cache):\n",
+    "    Z = cache\n",
+    "    dZ = np.array(dA, copy=True)\n",
+    "    dZ[Z <= 0] = 0\n",
+    "    assert(dZ.shape == Z.shape)\n",
+    "    return dZ"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
