Added utils.py to import utils functions as a module in AI_Image_Classifier app and utils.ipynb will be removed in the end

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Impors\n",
+    "# Imports\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import h5py\n",
